fixed an annoying off-center positioning issue; yes I know, I'm pedantic, so sue me

--- a/standard.css
+++ b/standard.css
@@ -104,6 +104,7 @@ pre {
 	height: 100%;
 	font-size: 32px;
 	margin: 0.35em 0 0.25em 0.35em;
+	width: 80px;
 }
 
 .sys_reqs_box {
